# aiterm

./: Cargo.toml  README.md  go.mod  go.sum  main.go
ai/: ai.go  gemini.go  prompts.go
config/: config.go
src/: config.rs  main.rs  rag.rs
src/vendors/: gemini.rs  mod.rs
