[package]
name = "aiterm"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.80"
tokio-stream = "0.1"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
walkdir = "2" 
